# langchain_multiagent

./: .gitignore  pyproject.toml
apis/: Flight_Status.csv  api_server.py
app/: .env  envs.py  llm.py  main.py  schemas.py  tools.py
app/static/: base.css  flight-agent.css  flight-agent.js  interview.css  interview.js  interview_setup.css  interview_setup.js  styles.css  voice-agent.js
app/supervisor_agent/: agent.py  agent_with_validation.py  handoffs.py
app/templates/: index.html  interview.html  interview_setup.html
app/worker_agents/: search_agent.py  status_agent.py  validation_agent.py
